# panicvtt

./: .gitignore  .gitmodules  Cargo.toml
.cargo/: config.toml
panicvtt_engine/: Cargo.toml
panicvtt_engine/src/: assets.rs  campaigns.rs  engine.rs  entities.rs  lib.rs  mechanics.rs  util.rs
panicvtt_engine/src/assets/: asset.rs  asset_manager.rs  asset_serde.rs  load_asset_result.rs  reference_serializable.rs
panicvtt_engine/src/campaigns/: campaign.rs  campaign_description.rs  scene.rs
panicvtt_engine/src/entities/: abilities.rs  class.rs  entity.rs  entityview.rs  race.rs  skills.rs
panicvtt_engine/src/mechanics/: dice.rs
panicvtt_engine/src/util/: asset_key_error.rs  enum_map.rs
panicvtt_engine/test/assets/campaigns/: manifest.panic
panicvtt_engine/test/assets/campaigns/campaign_1/: campaign_1.panic
panicvtt_engine/test/assets/campaigns/campaign_1/classes/: classy.panic
panicvtt_engine/test/assets/campaigns/campaign_2/: campaign_2.panic
panicvtt_engine/test/assets/classes/: test_class.panic
panicvtt_engine/test/assets/classes/nested_class/: nested_test_class.panic
panicvtt_engine/test/assets/entities/: test_entity.panic
panicvtt_engine/test/assets/races/: another_test_race.panic  test_race.panic
panicvtt_engine/test/bad_assets/campaigns/: manifest.panic
panicvtt_server/: Cargo.toml  Rocket.toml
panicvtt_server/src/: main.rs  panic_state.rs  parse_command.rs  parse_error.rs  routes.rs  version.rs
panicvtt_server/templates/: base.html.tera  index.html.tera  load_campaign.html.tera  login.html.tera  vtt.html.tera
(+14 files in other folders)
