[package]
name = "panicvtt_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_builder = "0.20.0"
enum-map = "2.7.3"

[dependencies.strum]
version = "0.26.2"
features = [
    "derive"
]

[dependencies.uuid]
version = "1.8.0"
features = [
    "std", "v7"
]
